--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,16 @@ body {
   color: #333;
   transition: background 0.3s, color 0.3s;
 }
+nav {
+  background-color: #f1f1f1; /* Light background for light mode */
+}
+
+/* For Dark Mode */
+@media (prefers-color-scheme: dark) {
+  nav {
+    background-color: #333; /* Dark background for dark mode */
+  }
+}
 
 /* === Layout Wrapper === */
 .container {
@@ -607,3 +617,4 @@ iframe {
   background-color: #444;
   color: #fff;
 }
+
